Добавлена функциональность лайков
