# src/main/java/ru/mirea/delegate/PostsApiDelegateImpl.java
@@ -8,6 +8,7 @@ import org.springframework.web.server.ResponseStatusException;
 import ru.mirea.api.PostsApiDelegate;
 import ru.mirea.dto.PostDto;
 import ru.mirea.dto.PostRqDto;
+import ru.mirea.service.LikeService;
 import ru.mirea.service.PostService;
 
 import java.util.List;
@@ -17,6 +18,7 @@ import java.util.List;
 public class PostsApiDelegateImpl implements PostsApiDelegate {
 
     private final PostService postService;
+    private final LikeService likeService;
 
     @Override
     public ResponseEntity<List<PostDto>> getPosts() {
@@ -47,5 +49,24 @@ public class PostsApiDelegateImpl implements PostsApiDelegate {
     @Override
     public ResponseEntity<PostDto> updatePost(Long postId, PostRqDto postRqDto) {
         return ResponseEntity.of(postService.updatePost(postId, postRqDto));
+    }
+
+    @Override
+    public ResponseEntity<Void> submitLike(Long postId) {
+        try {
+            likeService.submitLike(postId);
+            return ResponseEntity.ok().build();
+        } catch (ResponseStatusException e) {
+            return ResponseEntity.status(e.getStatusCode()).build();
+        }
+    }
+    @Override
+    public ResponseEntity<Void> unsumbitLike(Long postId) {
+        try {
+            likeService.unsumbitLike(postId);
+            return ResponseEntity.noContent().build();
+        } catch (ResponseStatusException e) {
+            return ResponseEntity.status(e.getStatusCode()).build();
+        }
     }
 }
